--- a/integers.html
+++ b/integers.html
@@ -54,7 +54,7 @@
       return new Table({
         x: vectorFromArray(x),
         y: vectorFromArray(y),
-        ix: vectorFromArray(ix),
+//        ix: vectorFromArray(ix),
         _id,
         integers: vectorFromArray(integers),
         batch_id: vectorFromArray(batch_id)
