--- a/integers.html
+++ b/integers.html
@@ -5,7 +5,13 @@
     <button id="even2">Stable highlight Even</button>
     <button id="b">Clear</button>
     <button id="select-ids">Select ids</button>
-    <input id="input-ids" title="selection" label="selection" type="text" value="1066 1968 2431 10012" />
+    <input
+      id="input-ids"
+      title="selection"
+      label="selection"
+      type="text"
+      value="1066 1968 2431 10012"
+    />
     <button id="select-lots-of-ids">Select lots of ids</button>
     <div id="filter">FILTER:</div>
     <div id="filter2">FILTER2:</div>
@@ -224,20 +230,24 @@
       },
     });
   }
-  document
-    .getElementById('select-ids')
-    .addEventListener('click', () => {
-      const ids = document.getElementById('input-ids').value.split(" ").filter(d => d)
-      console.log({ ids })
-      plot.select_data({ name: Math.random().toString(36), ids, idField: "_id" })
-    });
+  document.getElementById('select-ids').addEventListener('click', () => {
+    const ids = document
+      .getElementById('input-ids')
+      .value.split(' ')
+      .filter((d) => d);
+    console.log({ ids });
+    plot.select_data({ name: Math.random().toString(36), ids, idField: '_id' });
+  });
 
   document
     .getElementById('select-lots-of-ids')
     .addEventListener('click', () => {
-
-      console.log({ ids })
-      plot.select_data({ name: Math.random().toString(36), ids, idField: "_id" })
+      console.log({ ids });
+      plot.select_data({
+        name: Math.random().toString(36),
+        ids,
+        idField: '_id',
+      });
     });
   document
     .getElementById('prime')
